# solid-sniffle

./: .cursorrules  .env.example  .gemini_commit_message.txt  .gitignore  .security-theatre-ignore  .sops.yaml  ALPHA-TERMINAL-NON-CUSTODIAL-2025-10-23.md  ANNOUNCEMENT.md  ANTI-SECURITY-THEATRE-IMPLEMENTATION.md  AUDIT-V2.md  AUDIT-V3.md  AUDIT.md  BETA-TERMINAL-FRONTEND-REPORT.md  BETA-TERMINAL-REPUTATION-COMPLETE-2025-10-23.md  CLAUDE.md  CLIPPY_REPORT.md  COMPLETION-REP-3-4.md  CORRECTION-SCORES.md  Cargo.toml  DEMARRAGE_RAPIDE.md  DESIGN-MIGRATION-PROGRESS.md  DEV_TESTING.md  FICHIERS_AUTH.md  FICHIERS_MODIFIES.md  FIXES-APPLIED.md  FRONTEND-STYLE-RESTORED-2025-10-23.md  GEMINI-SKILL-GUIDE.md  GEMINI-SKILL-INSTALLED.md  GEMINI.md  GUIDE-TEST-MANUEL.md  HEALTHCHECKS-ADDED.md  IMPLEMENTATION_COMPLETE.md  INSTRUCTIONS-GEMINI-PHASE-4.5.md  INSTRUCTIONS-GEMINI-REPUTATION.md  INSTRUMENTATION-QUICK-START.md  MIGRATION-WSL2.md  MILESTONE-2.3-CORRECTIONS.md  MILESTONE-2.3-VERIFICATION.md  MULTISIG-ANALYSIS.md  NEXUS_COMPONENTS_INVENTORY.md  (+86 more)
.cargo/: config.toml
.claude/: SKILLS-USAGE.md
4.5/: PHASE-4.5-COMPLETE.md  README.md
DOX/: DEBUG-GUIDE.md  DIAGNOSTIC-CHECKOUT-WORKFLOW.md  DIAGNOSTIC-MULTISIG-CASSE.md  README.md  (+21 more)
cli/: Cargo.toml
cli/src/: checkpoint.rs  main.rs  noncustodial_wallet.rs  test_tool.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  types.rs  utils.rs
custodial/: .gitkeep  CUSTODIAL-AUDIT-2025-10-22.md  Cargo.toml  DEVELOPMENT-STATUS.md  README.md  STATUS.md  non_custodial_migration.md
custodial/migrations/: 001_create_disputes_table.sql  002_create_audit_log_table.sql  003_create_arbitration_decisions_table.sql  004_create_custodial_keys_table.sql
custodial/src/: arbitration.rs  audit.rs  error.rs  key_manager.rs  lib.rs  types.rs
reputation/: .gitignore  BUILD-AND-TEST.md  Cargo.toml  FIXES-APPLIED-2025-10-23.md  README-REP-3-4.md  README.md  REP-2-COMPLETE.md  REP-3-4-COMPLETE.md  REP-4-5-COMPLETION.md  REPUTATION-MODULE-STATUS.md  SESSION-RECAP-REP-COMPLETION.md  STATUS-INTEGRATION.md  test-on-ubuntu.sh
reputation/common/: Cargo.toml
reputation/common/src/: types.rs
reputation/crypto/: Cargo.toml
reputation/crypto/src/: lib.rs  reputation.rs
reputation/docs/: IPFS-PRODUCTION-CONFIG.md  IPFS-SETUP.md
reputation/scripts/: install-ipfs.sh  ipfs-daemon.sh  verify-ipfs-tor.sh
reputation/src/: lib.rs
reputation/tests/integration/: escrow_integration_test.rs  escrow_review_flow_test.rs  mod.rs  reputation_flow_test.rs
reputation/wasm/: Cargo.toml  build.sh
reputation/wasm/src/: lib.rs
reputation/wasm/static/css/: reputation.css
reputation/wasm/static/js/: reputation-verify.js
reputation/wasm/templates/reputation/: _review_list.html  submit_review.html  vendor_profile.html
server/: .env.example  Cargo.toml  README.md  SQLCIPHER-REALITY-CHECK.md  diesel.toml
server/benches/: recovery_benchmark.rs
server/migrations/2025-10-17-232851-0000_create_initial_schema/: down.sql  up.sql
server/migrations/2025-10-19-000504-0000_add_wallet_info_to_users/: down.sql  up.sql
server/migrations/2025-10-21-000000-0000_add_transaction_hash_to_escrows/: down.sql  up.sql
server/migrations/2025-10-22-000000-0000_create_reviews/: down.sql  up.sql
server/migrations/2025-10-23-142834-0000_add_images_to_listings/: down.sql  up.sql
server/migrations/2025-10-26-175351-0000_add_timeout_fields_to_escrows/: down.sql  up.sql
server/migrations/2025-10-26-182724-0000_add_multisig_state_columns/: down.sql  up.sql
server/migrations/2025-10-26-202554-0000_add_wallet_rpc_configs/: down.sql  up.sql
server/migrations/2025-10-27-000000-0000_add_category_to_listings/: down.sql  up.sql
server/migrations/2025-10-28-183959-0000_add_shipping_info_to_orders/: down.sql  up.sql
server/migrations/2025-11-03-190356-0000_add_wallet_address_history/: down.sql  up.sql
server/migrations/2025-11-03-221723-0000_add_temp_wallet_ids_to_escrows/: down.sql  up.sql
server/migrations/2025-11-07-000000-0000_add_order_messages/: down.sql  up.sql
server/migrations/2025-11-14-235340_add_multisig_round_state/: down.sql  up.sql
server/src/: dependencies.rs  error.rs  lib.rs  main.rs  schema.rs  wallet_manager.rs  wallet_pool.rs  websocket.rs
server/src/concurrency/: locks.rs  mod.rs  wallet_locks.rs
server/src/config/: mod.rs  timeout.rs
server/src/coordination/: README.md  escrow_coordinator.rs  mod.rs
server/src/crypto/: encryption.rs  mod.rs  multisig_validation.rs  shamir.rs  shamir_startup.rs
server/src/db/: mod.rs  reputation.rs
server/src/handlers/: airgap_dispute.rs  auth.rs  cart.rs  escrow.rs  frontend.rs  honeypot.rs  listings.rs  messages.rs  mod.rs  monitoring.rs  multisig_challenge.rs  noncustodial.rs  orders.rs  reputation.rs  reputation_ipfs.rs  user.rs
server/src/instrumentation/: collector.rs  events.rs  mod.rs  snapshots.rs
server/src/ipfs/: client.rs
server/src/logging/: sanitize.rs
server/src/middleware/: admin_auth.rs  auth.rs  csrf.rs  mod.rs  rate_limit.rs  security_headers.rs
server/src/models/: cart.rs  escrow.rs  listing.rs  message.rs  mod.rs  multisig_state.rs  order.rs  transaction.rs  user.rs  wallet_rpc_config.rs
server/src/monitoring/: metrics.rs  mod.rs
server/src/repositories/: mod.rs  multisig_state.rs
server/src/security/: mod.rs  placeholder_validator.rs
server/src/services/: airgap.rs  blockchain_monitor.rs  escrow.rs  mod.rs  price_conversion.rs  timeout_monitor.rs  wallet_session_manager.rs
server/tests/: README_E2E.md  airgap_integration_test.rs  auth_integration.rs  concurrent_session_creation_test.rs  escrow_e2e.rs  escrow_integration.rs  escrow_noncustodial_e2e.rs  htmx_integration.rs  integration_tests.rs  listings_integration.rs  orders_integration.rs  reputation_integration.rs  test_sqlcipher.rs  timeout_monitor_test.rs  wallet_manager_e2e.rs  wallet_recovery_test.rs
wallet/: Cargo.toml
wallet/src/: client.rs  escrow.rs  lib.rs  multisig.rs  rpc.rs  transaction.rs  validation.rs
wallet/tests/: integration.rs  multisig_e2e.rs  property_based_multisig.rs  transaction_e2e.rs
(+689 files in other folders)
