[workspace]
members = [
    "common",
    "wallet", 
    "cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Monero Marketplace Team"]
license = "MIT"
repository = "https://github.com/monero-marketplace/tor-v2"
description = "Monero Marketplace Tor v2.0 - Secure Escrow Platform"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Crypto
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
