[package]
name = "monero-marketplace-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Monero Marketplace"

[[bin]]
name = "monero-marketplace"
path = "src/main.rs"

[[bin]]
name = "test-tool"
path = "src/test_tool.rs"

[dependencies]
monero-marketplace-common = { path = "../common" }
monero-marketplace-wallet = { path = "../wallet" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
