[package]
name = "custodial"
version = "0.1.0"
edition = "2021"
authors = ["Monero Marketplace Team"]
description = "Custodial arbitration module for 2-of-3 multisig escrow"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
ed25519-dalek = "2.1"
sha3 = "0.10"
hex = "0.4"
rand = "0.8"

# Key management (HSM simulation for now)
zeroize = { version = "1.7", features = ["derive"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Monero integration
monero = "0.20"

# Common crate
monero-marketplace-common = { path = "../common" }

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "custodial"
path = "src/lib.rs"
