[workspace]
members = [
    "common",
    "crypto",
    "wasm",
]
resolver = "2"

[package]
name = "reputation"
version = "0.1.0"
edition = "2021"

[dependencies]
reputation-common = { path = "common" }
reputation-crypto = { path = "crypto" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.1"
rand = "0.8"

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
hex = "0.4"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
