[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-web-actors = "4.3"
actix = "0.13"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.27", features = ["bundled-sqlcipher"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.22"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
monero-marketplace-common = { path = "../common" }
monero-marketplace-wallet = { path = "../wallet" }

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"