[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-web-actors = "4.3"
actix = "0.13"
actix-governor = "0.5"
actix-files = "0.6"
actix-multipart = "0.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.27", features = ["bundled-sqlcipher"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.22"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = { version = "0.5.0", features = ["std"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
validator = { version = "0.16", features = ["derive"] }
url = "2.5"
thiserror = "1.0"
futures-util = "0.3"
time = "0.3"
monero-marketplace-common = { path = "../common" }
monero-marketplace-wallet = { path = "../wallet" }
tera = "1.19"
lazy_static = "1.4"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json", "multipart", "stream", "socks"] }

infer = "0.15"

# Reputation system
reputation-common = { path = "../reputation/common" }
reputation-crypto = { path = "../reputation/crypto" }
ed25519-dalek = "2.1"
sha2 = "0.10"

# TM-003: Challenge-Response cryptography
blake2 = "0.10"

# Shamir Secret Sharing for DB key protection (TM-002)
sharks = "0.5"
hex = "0.4"

[[bin]]
name = "split_key"
path = "src/bin/split_key.rs"

[[bin]]
name = "reconstruct_key"
path = "src/bin/reconstruct_key.rs"

[[bin]]
name = "apply_migration"
path = "src/bin/apply_migration.rs"

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"