[package]
name = "reputation-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
reputation-common = { path = "../common" }
ed25519-dalek = "2.1"
sha2 = "0.10"
base64 = "0.22"
anyhow = "1.0"
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
